강님 수정 반영