@@ -9,6 +9,10 @@ import com.example.hobiday_backend.domain.feed.exception.*;
 import com.example.hobiday_backend.domain.feed.repository.FeedFileRepository;
 import com.example.hobiday_backend.domain.feed.repository.FeedRepository;
 import com.example.hobiday_backend.domain.feed.repository.HashTagRepository;
+import com.example.hobiday_backend.domain.perform.entity.Perform;
+import com.example.hobiday_backend.domain.perform.exception.PerformErrorCode;
+import com.example.hobiday_backend.domain.perform.exception.PerformException;
+import com.example.hobiday_backend.domain.perform.repository.PerformRepository;
 import com.example.hobiday_backend.domain.profile.entity.Profile;
 import com.example.hobiday_backend.domain.profile.exception.ProfileErrorCode;
 import com.example.hobiday_backend.domain.profile.exception.ProfileException;
@@ -17,7 +21,10 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.Duration;
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,17 +34,22 @@ public class FeedService {
     private final ProfileRepository profileRepository;
     private final FeedFileRepository feedFileRepository;
     private final HashTagRepository hashTagRepository;
+    private final PerformRepository performRepository;
 
     //피드 작성
     public FeedRes createFeed(FeedReq feedReq, Long userId) {
         Profile profile = profileRepository.findByMemberId(userId)
                 .orElseThrow(() -> new ProfileException(ProfileErrorCode.PROFILE_NOT_FOUND));
 
+        Perform perform = performRepository.findById(feedReq.getPerformId())
+                .orElseThrow(() -> new PerformException(PerformErrorCode.PERFORM_NOT_FOUND));
+
         // 2. Feed 생성
         Feed feed = Feed.builder()
                 .content(feedReq.getContent())
                 .topic(feedReq.getTopic())
                 .profile(profile)
+                .perform(perform)
                 .build();
 
         Feed savedFeed = feedRepository.save(feed);
@@ -74,19 +86,34 @@ public class FeedService {
         hashTagRepository.saveAll(hashTags);
         savedFeed.getHashTags().addAll(hashTags);
 
-        // 6. FeedRes 반환
+        // 6. FeedRes 반환 (상대 시간 추가)
         return FeedRes.builder()
+                .feedId(savedFeed.getId())
                 .contents(savedFeed.getContent())
-                .profileName(savedFeed.getProfile().getProfileNickname()) // Profile 엔티티에 이름 필드가 있다고 가정
+                .profileName(savedFeed.getProfile().getProfileNickname())
+                .profileId(savedFeed.getProfile().getId())
+                .profileImageUrl(savedFeed.getProfile().getProfileImageUrl())
                 .hashTag(savedFeed.getHashTags().stream()
                         .map(HashTag::getHashTag)
-                        .toList()) // 저장된 HashTag 리스트
-                // url도 반환해야 함
+                        .toList())
                 .feedFiles(savedFeed.getFeedFiles().stream()
                         .map(FeedFile::getFileUrl)
                         .toList())
                 .likeCount(savedFeed.getLikeCount())
-                .isLiked(false) // 기본값 설정
+                .commentCount(savedFeed.getCommentList().size())
+                .isLiked(false)
+                .relativeTime(getRelativeTime(savedFeed.getCreatedTime())) // 상대 시간 추가
+                .performId(perform.getMt20id())
+                .performName(perform.getPrfnm())
+                .startDate(perform.getPrfpdfrom())
+                .endDate(perform.getPrfpdto())
+                .genreName(perform.getGenrenm())
+                .performState(perform.getPrfstate())
+                .placeName(perform.getFcltynm())
+                .openRun(perform.getOpenrun())
+                .area(perform.getArea())
+                .poster(perform.getPoster())
+                .likeCount(perform.getLikeCount())
                 .build();
     }
 
@@ -95,8 +122,9 @@ public class FeedService {
         // 멤버 id로 프로필 찾기
         Profile profile = profileRepository.findByMemberId(memberId)
                 .orElseThrow(() -> new ProfileException(ProfileErrorCode.PROFILE_NOT_FOUND));
-        // 이 멤버가 쓴 피드가 맞는지 확인하기
-
+        //
+        Perform perform = performRepository.findById(feedReq.getPerformId())
+                .orElseThrow(() -> new PerformException(PerformErrorCode.PERFORM_NOT_FOUND));
         // 2. 피드 조회 및 작성자 확인
         Feed feed = feedRepository.findById(feedId)
                 .orElseThrow(() -> new FeedException(FeedErrorCode.FEED_NOT_FOUND));
@@ -108,10 +136,13 @@ public class FeedService {
         // 3. 피드 수정
         feed.update(feedReq.getContent(), feedReq.getTopic(), feedReq.getFileUrls(), feedReq.getHashTags());
 
-        // 4. 응답 반환
+        // FeedRes 반환 (상대 시간 추가)
         return FeedRes.builder()
+                .feedId(feed.getId())
                 .contents(feed.getContent())
                 .profileName(feed.getProfile().getProfileNickname())
+                .profileId(feed.getProfile().getId())
+                .profileImageUrl(feed.getProfile().getProfileImageUrl())
                 .hashTag(feed.getHashTags().stream()
                         .map(HashTag::getHashTag)
                         .toList())
@@ -119,9 +150,21 @@ public class FeedService {
                         .map(FeedFile::getFileUrl)
                         .toList())
                 .likeCount(feed.getLikeCount())
+                .commentCount(feed.getCommentList().size())
                 .isLiked(false)
+                .relativeTime(getRelativeTime(feed.getCreatedTime())) // 상대 시간 추가
+                .performId(perform.getMt20id())
+                .performName(perform.getPrfnm())
+                .startDate(perform.getPrfpdfrom())
+                .endDate(perform.getPrfpdto())
+                .genreName(perform.getGenrenm())
+                .performState(perform.getPrfstate())
+                .placeName(perform.getFcltynm())
+                .openRun(perform.getOpenrun())
+                .area(perform.getArea())
+                .poster(perform.getPoster())
+                .likeCount(perform.getLikeCount())
                 .build();
-
     }
 
     public void deleteFeed(Long memberId, Long feedId) {
@@ -138,31 +181,75 @@ public class FeedService {
         feedRepository.delete(feed);
     }
 
-    public List<FeedRes> getFeedsByLatest() {
-        List<Feed> feeds = feedRepository.findAllByOrderByWriteDateDesc();
-
-        return feeds.stream()
-                .map(feed -> FeedRes.builder()
-                        .contents(feed.getContent())
-                        .profileName(feed.getProfile().getProfileNickname())
-//                        .hashTag(feed.getHashTags())
-                        .likeCount(feed.getLikeCount())
-                        .isLiked(false)
-                        .build())
-                .toList();
+    // 최신순 조회
+    public List<FeedRes> getFeedsByLatest(Long userId) {
+        List<Feed> feeds = feedRepository.findAllByOrderByCreatedTimeDesc();
+        if (feeds.isEmpty()) {
+            throw new FeedException(FeedErrorCode.FEED_LIST_EMPTY); // 피드가 없을 경우 예외 발생
+        }
+        return convertToFeedResList(feeds);
     }
 
-    public List<FeedRes> getFeedsByLikeCount() {
+    // 좋아요 순 조회
+    public List<FeedRes> getFeedsByLikes(Long userId) {
         List<Feed> feeds = feedRepository.findAllByOrderByLikeCountDesc();
+        if (feeds.isEmpty()) {
+            throw new FeedException(FeedErrorCode.FEED_LIST_EMPTY); // 피드가 없을 경우 예외 발생
+        }
+        return convertToFeedResList(feeds);
+    }
 
+    // Feed 엔티티를 FeedRes DTO로 변환
+    private List<FeedRes> convertToFeedResList(List<Feed> feeds) {
         return feeds.stream()
                 .map(feed -> FeedRes.builder()
+                        .feedId(feed.getId())
                         .contents(feed.getContent())
                         .profileName(feed.getProfile().getProfileNickname())
-//                        .hashTag(feed.getHashTags())
+                        .profileId(feed.getProfile().getId())
+                        .profileImageUrl(feed.getProfile().getProfileImageUrl())
+                        .hashTag(feed.getHashTags().stream()
+                                .map(HashTag::getHashTag)
+                                .collect(Collectors.toList()))
+                        .feedFiles(feed.getFeedFiles().stream()
+                                .map(FeedFile::getFileUrl)
+                                .collect(Collectors.toList()))
                         .likeCount(feed.getLikeCount())
-                        .isLiked(false)
+                        .commentCount(feed.getCommentList().size())
+                        .isLiked(false) // 기본값 설정
+                        .relativeTime(getRelativeTime(feed.getCreatedTime())) // 상대 시간 추가
+                        // 공연 정보 추가
+                        .performId(feed.getPerform() != null ? feed.getPerform().getMt20id() : null)
+                        .performName(feed.getPerform() != null ? feed.getPerform().getPrfnm() : null)
+                        .startDate(feed.getPerform() != null ? feed.getPerform().getPrfpdfrom() : null)
+                        .endDate(feed.getPerform() != null ? feed.getPerform().getPrfpdto() : null)
+                        .genreName(feed.getPerform() != null ? feed.getPerform().getGenrenm() : null)
+                        .performState(feed.getPerform() != null ? feed.getPerform().getPrfstate() : null)
+                        .placeName(feed.getPerform() != null ? feed.getPerform().getFcltynm() : null)
+                        .openRun(feed.getPerform() != null ? feed.getPerform().getOpenrun() : null)
+                        .area(feed.getPerform() != null ? feed.getPerform().getArea() : null)
+                        .poster(feed.getPerform() != null ? feed.getPerform().getPoster() : null)
+                        .performLikeCount(feed.getPerform() != null ? feed.getPerform().getLikeCount() : null)
                         .build())
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    // 상대 시간 계산
+    private String getRelativeTime(LocalDateTime createdTime) {
+        Duration duration = Duration.between(createdTime, LocalDateTime.now());
+        long seconds = duration.getSeconds();
+        long minutes = seconds / 60;
+        long hours = minutes / 60;
+        long days = hours / 24;
+
+        if (seconds < 60) {
+            return seconds + "초 전";
+        } else if (minutes < 60) {
+            return minutes + "분 전";
+        } else if (hours < 24) {
+            return hours + "시간 전";
+        } else {
+            return days + "일 전";
+        }
     }
 }
